--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ __pycache__/
 .ruff_cache
 # C extensions
 *.so
-
+.vscode
 # Distribution / packaging
 .Python
 build/
@@ -120,7 +120,7 @@ celerybeat.pid
 
 # SageMath parsed files
 *.sage.py
-
+.vscode
 # Environments
 .venv
 env/
